--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,12 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        build-scan-publish: true
+        build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
+        build-scan-terms-of-use-agree: "yes"
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
