--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,8 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew :app:testProductionDebugUnitTest
-    - name: Test with Gradle
-      run: ./gradlew :app:assembleProductionDebug
+    - name: Run Gradle command
+      uses: Raul6469/android-gradle-action@2.0.0
+      with:
+        script: :app:testProductionDebugUnitTest
+        android-licence: ${{ secrets.ANDROID_LICENCE }}
