--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,11 +11,28 @@ jobs:
 
     runs-on: ubuntu-latest
 
+
     steps:
     - uses: actions/checkout@v4
     
-    - name: Run Gradle command
-      uses: Raul6469/android-gradle-action@2.0.0
+    - name: set up JDK 21
+      uses: actions/setup-java@v4
       with:
-        script: :app:testProductionDebugUnitTest
-        android-licence: ${{ secrets.ANDROID_LICENCE }}
+        java-version: '21'
+        distribution: 'temurin'
+        cache: gradle
+        
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+      
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+
+    - name: Accept licenses
+      run: yes | sdkmanager --licenses || true
+      
+    - name: Build with Gradle
+      run: ./gradlew :app:testProductionDebugUnitTest
