--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,6 +33,13 @@ jobs:
 
     - name: Accept licenses
       run: yes | sdkmanager --licenses || true
+
+    - name: Restore gradle.properties
+      env:
+        GRADLE_PROPERTIES: ${{ secrets.COINCAP_API_KEY }}
+      shell: bash
+      run: |
+        echo "COINCAP_API_KEY=${GRADLE_PROPERTIES}" > ~/.gradle/production.properties
       
     - name: Build with Gradle
       run: ./gradlew :app:testProductionDebugUnitTest
