--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,10 +36,11 @@ jobs:
 
     - name: Create production.properties
       env:
-        COINCAP_API_KEY: ${{ secrets.COINCAP_API_KEY }}
+        COINCAP_API_KEY: ${{secrets.COINCAP_API_KEY}}
       shell: bash
       run: |
         echo COINCAP_API_KEY=$COINCAP_API_KEY >> ./production.properties
+        cat ./production.properties
       
     - name: Build with Gradle
       run: ./gradlew :app:testProductionDebugUnitTest
