--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,9 @@ ktlint_standard_comment-wrapping = disabled
 ktlint_standard_max-line-length = disabled
 ktlint_standard_multiline-expression-wrapping = disabled
 ktlint_standard_string-template-indent = disabled
+ktlint_standard_annotation = disabled
+
+
+ktlint_standard_trailing-comma-on-call-site = disabled
+ktlint_standard_trailing-comma-on-declaration-site = disabled
+ktlint_function_signature_body_expression_wrapping = default
