--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,3 +46,9 @@ jobs:
         ./gradlew ktlintCheck
         ./gradlew :app:testProductionDebugUnitTest
         ./gradlew :app:validateProductionDebugScreenshotTest
+
+    - name: Safe Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: screenshot-test-result
+        path: output/reports/screenshotTest/preview/debug/production/
